<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
							 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.cxp.ocs</groupId>
	<artifactId>ocs-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.57.0</version>
	<name>SearchHub Services - Parent</name>

	<modules>
		<module>open-commerce-search-api</module>
		<module>ocs-plugin-spi</module>
		<module>ocs-commons</module>
		<module>indexer-service</module>
		<module>search-service</module>
		<module>suggest-service-parent</module>
		<module>ocs-java-client</module>
		<module>integration-tests</module>
	</modules>

	<properties>
		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<docker.repository>commerceexperts</docker.repository>
		<docker.prefix>ocs-</docker.prefix>
        <docker.tag>${project.version}</docker.tag>
		<docker.latest.tag>latest</docker.latest.tag>
		<dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>

		<elasticsearch.version>7.17.16</elasticsearch.version>
		<spring.version>5.3.29</spring.version>
		<spring-boot.version>2.7.15</spring-boot.version>
		<spring-cloud.version>2021.0.8</spring-cloud.version>
		<springdoc.version>1.7.0</springdoc.version>
		<jackson.version>2.14.1</jackson.version>
		<junit.jupiter.version>5.7.0</junit.jupiter.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- modules -->
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>open-commerce-search-api</artifactId>
				<version>0.23.0</version>
			</dependency>
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>ocs-plugin-spi</artifactId>
				<version>1.10.1</version>
			</dependency>
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>ocs-commons</artifactId>
				<version>0.26.1</version>
			</dependency>
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>indexer-service</artifactId>
				<version>0.34.0</version>
			</dependency>
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>search-service</artifactId>
				<version>0.49.0</version>
			</dependency>
			<!-- only including the suggest-service directly, because it depends on 
				the other suggest modules -->
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>suggest-service</artifactId>
				<version>0.26.1</version>
			</dependency>
			<dependency>
				<groupId>de.cxp.ocs</groupId>
				<artifactId>ocs-java-client</artifactId>
				<version>0.19.0</version>
			</dependency>

			<!-- serialization -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-parameter-names</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- elasticsearch dependencies -->
			<dependency>
				<groupId>org.elasticsearch</groupId>
				<artifactId>elasticsearch</artifactId>
				<version>${elasticsearch.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.elasticsearch.client</groupId>
				<artifactId>elasticsearch-rest-high-level-client</artifactId>
				<version>${elasticsearch.version}</version>
			</dependency>
			<dependency>
				<groupId>fr.pilato.elasticsearch</groupId>
				<artifactId>elasticsearch-beyonder</artifactId>
				<version>7.16</version>
			</dependency>
			<dependency>
				<groupId>pl.allegro.tech</groupId>
				<artifactId>embedded-elasticsearch</artifactId>
				<version>2.10.0</version>
			</dependency>

			<!-- data structure libraries -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>[32.1.2-jre,)</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.9</version>
			</dependency>

			<!-- swagger -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-webmvc-core</artifactId>
				<version>${springdoc.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-webmvc</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.29</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.13</version>
			</dependency>

			<!-- dev tooling -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<scope>provided</scope>
				<version>1.18.26</version>
			</dependency>

			<!-- testing -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>2.2</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>3.7.7</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.13.1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!-- Set up JAR manifest -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<classpathPrefix>lib/</classpathPrefix>
								<mainClass>de.cxp.ocs.Application</mainClass>
								<useUniqueVersions>false</useUniqueVersions>
							</manifest>
						</archive>
					</configuration>
				</plugin>

				<!-- Copy Maven dependencies into target/lib/ -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.2</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<overWriteReleases>false</overWriteReleases>
								<includeScope>runtime</includeScope>
								<outputDirectory>${project.build.directory}/lib</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>3.3.1</version>
					<configuration>
						<from>
							<image>eclipse-temurin:11-alpine</image>
						</from>
						<to>
							<image>${docker.repository}/${docker.prefix}${project.artifactId}:${project.version}</image>
							<tags>
								<tag>${docker.tag}</tag>
                                <tag>${docker.latest.tag}</tag>
							</tags>
						</to>
						<container>
							<jvmFlags>
								<jvmFlag>-server</jvmFlag>
								<jvmFlag>-XX:+UseContainerSupport</jvmFlag>
							</jvmFlags>
							<entrypoint></entrypoint>
						</container>
					</configuration>
					<executions>
						<execution>
							<id>prepare-docker-images</id>
							<phase>install</phase>
							<goals>
								<goal>dockerBuild</goal>
							</goals>
						</execution>
						<execution>
							<id>publish-docker-images</id>
							<phase>deploy</phase>
							<goals>
								<goal>build</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M3</version>
				<executions>
					<execution>
						<id>basic-checks</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
								<dependencyConvergence />
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<!-- necessary for jackson-module-parameter-names -->
					<compilerArgs>
						<compilerArg>-parameters</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<dependencySourceIncludes>de.cxp.ocs:*</dependencySourceIncludes>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<workingDirectory>${project.build.directory}</workingDirectory>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.honton.chas</groupId>
				<artifactId>exists-maven-plugin</artifactId>
				<version>0.3.0</version>
				<configuration>
					<artifact>${project.artifactId}-${project.version}.${project.packaging}</artifact>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>remote</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0-M1</version>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>cxp-public-releases</id>
			<url>https://nexus.commerce-experts.com/content/repositories/searchhub-external/</url>
		</repository>
		<snapshotRepository>
			<id>cxp-public-snapshots</id>
			<url>https://nexus.commerce-experts.com/content/repositories/searchhub-public-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>cxp-public-releases</id>
			<url>https://nexus.commerce-experts.com/content/repositories/searchhub-external/</url>
		</repository>
		<repository>
			<id>cxp-public-snapshots</id>
			<url>https://nexus.commerce-experts.com/content/repositories/searchhub-public-snapshots/</url>
		</repository>
	</repositories>
</project>
